scss/partials/_buttons.scss
button {
	-webkit-appearance:none;
	outline:none;
	border:none;
	background-color:$accent;
	border-radius:18px;
	height:36px;
	position:relative;

	i:first-child {
		margin-right:4px;
	}
	i:last-child {
		margin-left:4px;
	}

	a {
		display:flex;
		align-items:center;
		justify-content:center;
		color:#FFF;
		display:block;
		font-size:0.75rem;
		text-align:center;
		padding:0 32px;
	}
}

